backdrop not covering actions menu bugfix [IT114]

--- a/public_html/layouts/basic/styles/_Style.scss
+++ b/public_html/layouts/basic/styles/_Style.scss
@@ -2630,7 +2630,7 @@ html, body, .o-base-container {
 }
 
 .modal-backdrop {
-	z-index: 1030;
+	z-index: 1031;
 }
 
 .commonActionsContainer .badge {
